<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/holo_blue_light"
    android:fontFamily="monospace"
    tools:context="hockey.hockeygame.GameActivity">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="600sp"
        android:layout_height="70sp"
        android:layout_marginTop="0sp"
        android:text="@string/title"
        android:textSize="45sp"
        android:paddingLeft="5sp"
        android:paddingRight="5sp"
        android:background="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/play_them"
        android:text="@string/play_them"
        android:onClick="onTakeThemOnButtonPressed"
        android:layout_width="300sp"
        android:layout_height="150sp"
        android:layout_marginTop="680sp"
        android:textSize="50sp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:fontFamily="monospace"
        android:bottomRightRadius="10dp"
        android:bottomLeftRadius="10dp"
        android:topLeftRadius="10dp"
        android:topRightRadius="10dp"
        android:padding="10dp"
        />

    <Button
        android:id="@+id/off_the_glass"
        android:text="@string/off_the_glass"
        android:onClick="onOffTheGlassButtonPressed"
        android:layout_width="300sp"
        android:layout_height="150sp"
        android:layout_marginLeft="300sp"
        android:layout_marginStart="300sp"
        android:layout_marginTop="680sp"
        android:textSize="50sp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:fontFamily="monospace"
        android:bottomRightRadius="10dp"
        android:bottomLeftRadius="10dp"
        android:topLeftRadius="10dp"
        android:topRightRadius="10dp"
        android:padding="10dp"

        />

    <TextView
        android:id="@id/result_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="590sp"
        android:text="@string/show"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:freezesText="true"
        android:fontFamily="monospace"/>

    <TextView
    android:id="@id/player_box"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="250sp"
    android:text="@string/playerShow"
    android:layout_centerHorizontal="true"
    android:textSize="40sp"
    android:textAlignment="center"
    android:freezesText="true"
    android:fontFamily="monospace"/>

    <TextView
        android:id="@id/situation_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80sp"
        android:text="@string/situationShow"
        android:layout_centerHorizontal="true"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:freezesText="true"
        android:fontFamily="monospace"/>

</RelativeLayout>
