<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    android:fontFamily="monospace"
    tools:context="hockey.hockeygame.StartActivity">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/kassian"
        android:paddingTop="585sp" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="600sp"
        android:layout_height="70sp"
        android:layout_marginTop="0sp"
        android:text="@string/title"
        android:textSize="45sp"
        android:paddingLeft="5sp"
        android:paddingRight="5sp"
        android:background="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/game_explain"
        android:paddingLeft="25sp"
        android:paddingStart="25sp"
        android:paddingEnd="25sp"
        android:layout_width="570sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70sp"
        android:text="@string/game_explain"
        android:textSize="30sp"
        android:gravity="fill" />


    <Button
        android:id="@+id/draft_card"
        android:text="@string/draft_your_player"
        android:onClick="onDraftButtonPressed"
        android:layout_width="600sp"
        android:layout_height="90sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="500sp"
        android:textSize="50sp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:fontFamily="monospace"
        android:bottomRightRadius="10dp"
        android:bottomLeftRadius="10dp"
        android:topLeftRadius="10dp"
        android:topRightRadius="10dp"
        android:padding="10dp" />

</RelativeLayout>
